--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm-run-all build-bin build-assets",
     "build-bin": "xmake --build",
     "build-assets": "npm-run-all build-css build-vendor-assets",
-    "build-vendor-assets": "cp -rf .repos/lcui.css/dist/assets app/",
+    "build-vendor-assets": "cp-cli .repos/lcui.css/dist/assets app/",
     "build-css": "npm-run-all build-css-main build-css-themes",
     "build-css-themes": "node-sass --output app/assets/stylesheets/themes --output-style expanded src/scss/themes/green.scss",
     "build-css-main": "node-sass --output app/assets/stylesheets --output-style expanded src/scss/main.scss"
@@ -32,7 +32,8 @@
   },
   "homepage": "https://github.com/lc-soft/LC-Finder#readme",
   "devDependencies": {
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.10.0",
     "npm-run-all": "^4.1.3"
-  }
+  },
+  "dependencies": {}
 }
