--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "npm-run-all build-bin build-assets",
     "build-bin": "xmake --build",
     "build-assets": "npm-run-all build-css build-vendor-assets",
-    "build-vendor-assets": "cp-cli .repos/lcui.css/dist/assets app/",
+    "build-vendor-assets": "cp-cli .repos/lcui.css/dist/assets app/assets",
     "build-css": "npm-run-all build-css-main build-css-themes",
-    "build-css-themes": "node-sass --output app/assets/stylesheets/themes --output-style expanded src/scss/themes/green.scss",
+    "build-css-themes": "node-sass --output app/assets/stylesheets/themes --output-style expanded src/scss/themes/default.scss",
     "build-css-main": "node-sass --output app/assets/stylesheets --output-style expanded src/scss/main.scss"
   },
   "repository": {
