feat: add labelbox widget

--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClCompile Include="src\ui\components\link_i18n.c">
       <Filter>源文件\ui\components</Filter>
     </ClCompile>
+    <ClCompile Include="src\ui\components\labelbox.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE" />
@@ -244,6 +247,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\link_i18n.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\labelbox.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
