--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -45,6 +45,7 @@
     <ClCompile Include="src\ui\components\dialog_progress.c" />
     <ClCompile Include="src\ui\components\dialog_prompt.c" />
     <ClCompile Include="src\ui\components\filesync.c" />
+    <ClCompile Include="src\ui\components\labelbox.c" />
     <ClCompile Include="src\ui\components\link_i18n.c" />
     <ClCompile Include="src\ui\components\progressbar.c" />
     <ClCompile Include="src\ui\components\sidebar.c" />
@@ -85,6 +86,7 @@
     <ClInclude Include="include\i18n.h" />
     <ClInclude Include="include\i18n_datetime.h" />
     <ClInclude Include="include\kvdb.h" />
+    <ClInclude Include="include\labelbox.h" />
     <ClInclude Include="include\link_i18n.h" />
     <ClInclude Include="include\progressbar.h" />
     <ClInclude Include="include\sha1.h" />
@@ -215,8 +217,8 @@
       </Command>
     </PreLinkEvent>
     <PreBuildEvent>
-      <Command>copy "$(SolutionDir)..\LCUI\bin\$(Configuration)\LCUI.*" "$(SolutionDir)vendor\lib\$(PlatformTarget)-windows\$(Configuration)"
-copy "$(SolutionDir)..\lcui.css\dist\lib\$(Configuration)\LCUIEx.*" "$(SolutionDir)vendor\lib\$(PlatformTarget)-windows\$(Configuration)"</Command>
+      <Command>
+      </Command>
     </PreBuildEvent>
     <CustomBuildStep>
       <Command>
@@ -260,8 +262,8 @@ copy "$(OutDir)*.dll" "$(SolutionDir)app"</Command>
       </Command>
     </PreLinkEvent>
     <PreBuildEvent>
-      <Command>copy "$(SolutionDir)..\LCUI\bin\$(Configuration)\LCUI.*" "$(SolutionDir)vendor\lib\$(PlatformTarget)-windows\$(Configuration)"
-copy "$(SolutionDir)..\lcui.css\dist\lib\$(Configuration)\LCUIEx.*" "$(SolutionDir)vendor\lib\$(PlatformTarget)-windows\$(Configuration)"</Command>
+      <Command>
+      </Command>
     </PreBuildEvent>
     <CustomBuildStep>
       <Command>
