--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -150,6 +150,12 @@
     <ClCompile Include="src\ui\components\labelbox.c">
       <Filter>源文件\ui\components</Filter>
     </ClCompile>
+    <ClCompile Include="src\ui\views\picture_labels.c">
+      <Filter>源文件\ui\views</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\labelitem.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE" />
@@ -250,6 +256,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\labelbox.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\labelitem.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
